fix(duckduckgo): text overflow fade color

--- a/styles/duckduckgo/catppuccin.user.css
+++ b/styles/duckduckgo/catppuccin.user.css
@@ -2,7 +2,7 @@
 @name DuckDuckGo Catppuccin
 @namespace github.com/catppuccin/userstyles/styles/duckduckgo
 @homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/duckduckgo
-@version 0.1.7
+@version 0.1.8
 @updateURL https://github.com/catppuccin/userstyles/raw/main/styles/duckduckgo/catppuccin.user.css
 @supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3Aduckduckgo
 @description Soothing pastel theme for DuckDuckGo
@@ -620,6 +620,10 @@
       border-bottom-color: @surface2;
     }
 
+    .zcm--right-fade::before {
+      linear-gradient(90deg, rgba(255,255,255,0), @mantle)
+    }
+    
     .footer {
       border-top-color: @surface0;
     }
